src/test/ui/span/dropck_direct_cycle_with_drop.stderr
error: `d2` does not live long enough
  --> $DIR/dropck_direct_cycle_with_drop.rs:48:1
   |
46 |     d1.p.set(Some(&d2));
   |                    -- borrow occurs here
47 |     d2.p.set(Some(&d1));
48 | }
   | ^ `d2` dropped here while still borrowed
   |
   = note: values in a scope are dropped in the opposite order they are created

error: `d1` does not live long enough
  --> $DIR/dropck_direct_cycle_with_drop.rs:48:1
   |
47 |     d2.p.set(Some(&d1));
   |                    -- borrow occurs here
48 | }
   | ^ `d1` dropped here while still borrowed
   |
   = note: values in a scope are dropped in the opposite order they are created

error: aborting due to 2 previous errors

